# Agora-ai-agent-visualizer

./: .gitignore  README.md  agora-improvements.md  agora-v2-plan.md  agora-v2-roadmap.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-10-plan-1-provider-config.md  2026-03-10-plan-2-orchestrator.md  2026-03-10-plan-3-frontend-ui.md
docs/superpowers/specs/: 2026-03-10-multi-model-orchestration-design.md
src/: index.html  splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  orchestrator.rs  presets.rs  provider.rs
