[package]
name = "agora"
version = "0.3.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
libc = "0.2"
